evaluation-run/602/k8s/prod/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: microservice-demo
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8083
      targetPort: 50059
  selector:
    app: api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: microservice-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ralfx22/md-api
          args:
            - serve
          ports:
            - containerPort: 50059
              protocol: TCP
