evaluation-run/602/k8s/prod/postgresql.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: microservice-demo
spec:
  type: ClusterIP
  ports:
    - name: tcp
      port: 5432
      targetPort: 5432
  selector:
    app: postgresql
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgresql
  namespace: microservice-demo
spec:
  serviceName: postgresql
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgresql
          image: postgres:16
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - name: postgresdb
              mountPath: /var/lib/postgresql/data
          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d microservice-task
            failureThreshold: 20
            periodSeconds: 5
            timeoutSeconds: 5
  volumeClaimTemplates:
    - metadata:
        name: postgresdb
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
